@@ -242,6 +242,8 @@ $wgLanguageNamesEn =& $wgLanguageNames;
 	MAG_FULLPAGENAMEE        => array( 1,    'FULLPAGENAMEE'          ),
 	MAG_SUBPAGENAME	         => array( 1,	 'SUBPAGENAME'		  	  ),
 	MAG_SUBPAGENAMEE		 => array( 1, 	 'SUBPAGENAMEE'			  ),
+	MAG_BASEPAGENAME		 => array( 1,	 'BASEPAGENAME'			  ),
+	MAG_BASEPAGENAMEE		 => array( 1,	 'BASEPAGENAMEE'		  ),
 	MAG_TALKPAGENAME		 => array( 1, 	 'TALKPAGENAME'			  ),
 	MAG_TALKPAGENAMEE		 => array( 1,	 'TALKPAGENAMEE'		  ),
 	MAG_SUBJECTPAGENAME		 => array( 1, 	 'SUBJECTPAGENAME', 'ARTICLEPAGENAME' ),
